--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "dompurify": "^3.0.5",
+    "framer-motion": "^10.12.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
     "typescript": "^4.9.5",
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.2",
     "react-router-dom": "^6.14.1"
   }
 }
