--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "axios": "^1.4.0",
     "dompurify": "^3.0.5",
     "framer-motion": "^10.12.23",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -23,7 +25,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --https --ssl-key=./keys/localhost-key.pem --ssl-cert=./keys/localhost.pem",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,6 +50,7 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
+    "@types/js-cookie": "^3.0.3",
     "react-router-dom": "^6.14.1"
   }
 }
