--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
     "@types/js-cookie": "^3.0.3",
+    "@types/redux-persist": "^4.3.1",
     "react-router-dom": "^6.14.1"
   }
 }
