--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start --https --ssl-key=./keys/localhost-key.pem --ssl-cert=./keys/localhost.pem",
+    "start": "set PORT=3001 && react-scripts start --https --ssl-key=./keys/localhost-key.pem --ssl-cert=./keys/localhost.pem",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
