--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.4.0",
     "dompurify": "^3.0.5",
     "framer-motion": "^10.12.23",
+    "i18next": "^23.4.4",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.1.2",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
