--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "redux-persist": "^6.0.0",
     "sass": "^1.63.6",
     "typescript": "^4.9.5",
